[package]
name = "solana-escrow-tutorial"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
solana-program = "1.9.1"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0.30"

[lib]
crate-type = ["cdylib", "lib"]
